# ElementaryCellularAutomaton

./: .gitignore  README.md  pyproject.toml
src/: __main__.ipynb  elementary_cellular_automaton.py
