[tool.poetry]
name = "elementary-cellular-automaton"
version = "0.1.0"
description = ""
authors = ["PetrFridrich <petr.fridrich.1998@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
ipywidgets = "^8.1.5"
tqdm = "^4.66.6"
tornado = "^6.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
